# rust-rust-1-96-1

./: .whitesource  Cargo.toml  README.md  autotest_config.json  expected-tree.json  rust-toolchain.toml
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
